# cytrus-downloader-v6

./: .gitignore  Cargo.toml  README.md  build.rs
flatbuffers/: manifest.fbs
src/: main.rs  models.rs
src/flatbuffers/: manifest_generated.rs
